--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.4",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "date-fns": "^3.6.0",
     "disqus-react": "^1.1.5",
+    "framer-motion": "^11.2.10",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "marked": "^12.0.2",
