--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^3.6.0",
+    "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "disqus-react": "^1.1.5",
     "framer-motion": "^11.2.10",
@@ -37,12 +39,16 @@
     "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-gtm-module": "^2.0.11",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-lite-youtube-embed": "^2.4.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
-    "swiper": "^11.1.3"
+    "request-ip": "^3.3.0",
+    "swiper": "^11.1.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
@@ -52,6 +58,8 @@
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "@types/request-ip": "^0.0.41",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
